--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
 /vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
+/node_modules/
+/coverage/
+/.phpunit.cache/
+/.idea/
+/.vscode/
+*.log
+.DS_Store
+composer.lock
+.env
+.env.testing
 
 # Laravel 4 specific
 bootstrap/compiled.php
@@ -16,7 +23,6 @@ public_html/storage
 public_html/hot
 
 storage/*.key
-.env
 Homestead.yaml
 Homestead.json
 /.vagrant
